<resources>
    <string name="app_name">Coronannya</string>
    <string name="txtJumlah">0</string>
    <string name="txtRecovered">Sembuh</string>
    <string name="txtDeath">Meninggal</string>
    <string name="txtConfirmed">Terkonfirmasi</string>
    <string name="txtActive">Aktif</string>
    <string name="txtIndonesia">Indonesia</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>