<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:foregroundGravity="center"
                android:indeterminate="true"
                android:indeterminateTint="@color/blue_500"
                android:indeterminateTintMode="src_atop"
                android:visibility="gone" />

            <androidx.cardview.widget.CardView
                android:id="@+id/graphCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:elevation="16dp"
                app:cardCornerRadius="16dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/txtGlobal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="16dp"
                        android:text="Global"
                        android:textSize="32sp" />

                    <TextView
                        android:id="@+id/txtLastUpdate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtGlobal"
                        android:layout_centerHorizontal="true"
                        android:text="0000-00-00 00:00:00"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp" />

                    <com.github.mikephil.charting.charts.PieChart
                        android:id="@+id/globalSummaryChart"
                        android:layout_width="match_parent"
                        android:layout_height="280dp"
                        android:layout_below="@id/txtLastUpdate"
                        android:layout_margin="16dp" />

                </RelativeLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:id="@+id/firstStatusRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/graphCard"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/confirmedCard"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txtConfirmed"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="8dp"
                            android:text="@string/txtJumlah"
                            android:textSize="24sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txtConfirmed"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/txtConfirmed"
                            android:textColor="@color/colorBlue"
                            android:textSize="24sp" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/ActiveCard"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txtActive"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="8dp"
                            android:text="@string/txtJumlah"
                            android:textSize="24sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txtActive"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/txtActive"
                            android:textColor="@color/colorYellow"
                            android:textSize="24sp" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/secondStatusRow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/firstStatusRow"
                android:gravity="center_horizontal"
                android:orientation="horizontal">


                <androidx.cardview.widget.CardView
                    android:id="@+id/recoveredCard"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txtRecovered"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="8dp"
                            android:text="@string/txtJumlah"
                            android:textSize="24sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txtRecovered"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/txtRecovered"
                            android:textColor="@color/colorGreen"
                            android:textSize="24sp" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/deathCard"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:cardCornerRadius="16dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/txtDeath"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="8dp"
                            android:text="@string/txtJumlah"
                            android:textSize="24sp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/txtDeath"
                            android:layout_centerHorizontal="true"
                            android:layout_marginTop="4dp"
                            android:layout_marginBottom="8dp"
                            android:text="@string/txtDeath"
                            android:textColor="@color/colorRed"
                            android:textSize="24sp" />
                    </RelativeLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
